--- a/ColoredMarkers/styles.css
+++ b/ColoredMarkers/styles.css
@@ -24,7 +24,7 @@ h1{
 
 .blue{
     background: linear-gradient(hsl(186,76%,16%), hsl(223,90%,60%), hsl(240,56%,42%));
-    box-shadow: 0px 0px 20px 0px blue;
+    box-shadow: 0px 0px 20px 0px hsla(223, 59%, 31%, 0.8);
 }
 
 .container{
