--- a/RegistrationForm/styles.css
+++ b/RegistrationForm/styles.css
@@ -18,6 +18,7 @@ body {
     max-width: 500px;
     min-width: 300px;
     margin: 0 auto;
+    padding-bottom: 2em;
   }
 
 label{
@@ -69,11 +70,19 @@ input[type="submit"]
 {
     display: block;
     width: 60%;
-    margin: 0 auto;
+    margin: 1em auto 1em auto;
     height: 2em;
     font-size: 1.1rem;
     background-color: #3b3b4f;
     border-color: white;
-    max-width: 300px;
+    min-width: 300px;
     
+}
+
+input[type="file"]{
+    padding: 1px 2px;
+}
+
+a{
+    color: #dfdfe2;
 }
