--- a/SurveyFormProject/styles.css
+++ b/SurveyFormProject/styles.css
@@ -1,8 +1,43 @@
 body{
-
+    
 }
 
-label{
+label, legend{
+    display: block;
+    color: aliceblue;
+}
+
+#title{
+    margin-bottom: -10px;
+}
+
+header{
     display: block;
 }
 
+.header-text{
+    text-align: center;
+}
+
+#title, #description{
+    text-align: center;
+    color:azure;
+}
+
+.container{
+    background-color: #2C7F43;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    margin: 3.125rem auto 0 auto;
+}
+
+
+#survey-form{
+    
+    text-align: center;
+}
+
+form{
+    background-color: #396340;
+}
